update 25th jan/2024

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,8 @@ p.end.text-center {
 
 img.logo-site {
   display: none;
-  max-width: 106px;
+  max-width: 125px;
+  height: auto;
 }
 
 a.navbar-brand {
