--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ body {
   transition: background-color 0.4s ease-out;
 }
 
+.skyrise-hero{
+  margin-top: 75px;
+}
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -236,7 +240,6 @@ p.end.text-center {
 }
 
 img.logo-site {
-  display: none;
   max-width: 125px;
   height: auto;
 }
@@ -276,7 +279,7 @@ section#header-fil-form {
 
 .skyrise-banner-form {
   margin: 0 auto;
-  padding: 8rem 2rem 0rem 2rem !important;
+  padding: 4rem 2rem 0rem 2rem !important;
   background: #fbfbfb;
 }
 
@@ -342,6 +345,7 @@ i {
   border: 1px solid #ffffff;
   background: #000000;
   padding: 10px 12px;
+  margin:10px 0px 10px 0px;
 }
 
 h2.skyrise-big-header.dark-color {
@@ -455,6 +459,7 @@ img.bullets-pov {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 16px;
   letter-spacing: 2px;
+  text-align: center;
 }
 
 .skyrise-big-header-blue {
@@ -797,7 +802,7 @@ section#tyfssec1 {
   section.skyrise-about-ss,
   section.skyrise-gallery-carousal,
   .skyrise-conf {
-    padding: 3rem 2rem;
+    padding: 2.5rem 2rem;
   }
 
   .skyrise-con-blocks {
