--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,11 +613,19 @@ section.skyrise-gallery-carousal {
 }
 
 .relativetextbox {
-  position: relative;
-  width: auto;
+  letter-spacing: 1px;
+  font-size: 17px;
+  position: absolute;
+  bottom: 45px;
+  right: 12px;
+  padding: 0.5rem;
+  text-shadow: 1px 1px 10px #000000;
+  color: #fff;
+  text-align: left;
+  font-weight: 600;
 }
 
-.absolutetexttop {
+/* .absolutetexttop {
   letter-spacing: 1px;
   font-size: 14px;
   position: absolute;
@@ -628,7 +636,7 @@ section.skyrise-gallery-carousal {
   color: #fff;
   text-align: left;
   font-weight: 600;
-}
+} */
 
 .ss-n {
   font-weight: 600;
@@ -911,6 +919,17 @@ section#tyfssec1 {
     flex-direction: column-reverse;
   }
 }
+
+#connectivity-last-row {
+  width:53%;
+}
+
+@media screen and (max-device-width: 562px){
+  #connectivity-last-row{
+    width: auto;
+  }
+}
+
 
 /*
 @media (min-width: 576px) {
